add more required inputs to config

--- a/discord/config.json
+++ b/discord/config.json
@@ -2,5 +2,8 @@
 	"clientId": "",
 	"token": "",
 	"frcapi": "",
-	"mainhostname": ""
+	"mainhostname": "",
+	"scoutteama": "",
+	"scoutteamb": "",
+	"leadscout": ""
 }
