--- a/discord/config.json
+++ b/discord/config.json
@@ -5,5 +5,8 @@
 	"mainhostname": "",
 	"scoutteama": "",
 	"scoutteamb": "",
-	"leadscout": ""
+	"leadscout": "",
+	"drive": "",
+	"pit": "",
+	"myteam": "766"
 }
