--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "concat-stream": "^2.0.0",
+    "formidable": "^2.0.1",
     "http": "^0.0.1-security",
+    "querystring": "^0.2.1",
     "sqlite3": "^5.1.2",
     "util": "^0.12.5"
   }
