--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
 	"leadscout": "",
 	"drive": "",
 	"pit": "",
-	"myteam": "",
+	"myteam": "766",
 	"repoUrl": "https://github.com/Team766/scouting-app.git",
 	"botOwnerUserID": ""
 }
