allow a default for season

--- a/config.example.json
+++ b/config.example.json
@@ -10,5 +10,6 @@
 	"pit": "",
 	"myteam": "766",
 	"repoUrl": "https://github.com/Team766/scouting-app.git",
-	"botOwnerUserID": ""
+	"botOwnerUserID": "",
+	"season": 2023
 }
