--- a/config.example.json
+++ b/config.example.json
@@ -11,5 +11,6 @@
 	"repoUrl": "https://github.com/Team766/scouting-app.git",
 	"botOwnerUserID": "",
 	"season": 2023,
-	"currentComp": "NONE"
+	"currentComp": "NONE",
+	"clientSec": ""
 }
