--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@discordjs/rest": "^0.3.0",
         "cron": "^2.1.0",
         "discord-api-types": "^0.31.1",
+        "discord-oauth2": "^2.11.0",
         "discord.js": "^13.6.0",
         "follow-redirects": "^1.14.9",
         "lodash": "^4.17.21",
