--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "discord.js": "^13.6.0",
         "follow-redirects": "^1.14.9",
         "lodash": "^4.17.21",
+        "request": "^2.88.2",
         "sqlite3": "^5.1.4"
     },
     "scripts": {
