update start command for the new filename

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node discord.js & node submit.js"
+        "start": "node discord.js & node serve.js"
     },
     "keywords": [],
     "author": "JayAgra",
