change the formatting of the channel

--- a/config.example.json
+++ b/config.example.json
@@ -14,5 +14,5 @@
 	"currentComp": "NONE",
 	"clientSec": "",
 	"redirectURI": "http://scout.example.com",
-	"scoutChannel": ""
+	"scoutChannel": 0
 }
