allow the event code to have a default

--- a/config.example.json
+++ b/config.example.json
@@ -13,6 +13,5 @@
 	"season": 2023,
 	"currentComp": "NONE",
 	"clientSec": "",
-	"redirectURI": "http://scout.example.com",
-	"scoutChannel": 0
+	"redirectURI": "http://scout.example.com"
 }
