--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "discord-api-types": "^0.31.1",
         "discord-oauth2": "^2.11.0",
         "discord.js": "^13.6.0",
+        "express": "^4.18.2",
         "follow-redirects": "^1.14.9",
         "lodash": "^4.17.21",
         "request": "^2.88.2",
@@ -16,7 +17,7 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node discord.js & node serve.js"
+        "start": "node discord.js & node serve-express.js"
     },
     "keywords": [],
     "author": "JayAgra",
