--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node discord.js & node serve-express.js"
+        "start": "node discord.js & node serve.js"
     },
     "keywords": [],
     "author": "JayAgra",
