--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
         "discord-api-types": "^0.31.1",
         "discord-oauth2": "^2.11.0",
         "discord.js": "^13.6.0",
+        "ejs": "^3.1.8",
         "express": "^4.18.2",
+        "express-session": "^1.17.3",
         "follow-redirects": "^1.14.9",
         "lodash": "^4.17.21",
-        "request": "^2.88.2",
+        "passport": "^0.6.0",
+        "passport-discord": "^0.1.4",
         "sqlite3": "^5.1.4"
     },
     "scripts": {
