--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "express-session": "^1.17.3",
         "follow-redirects": "^1.14.9",
         "lodash": "^4.17.21",
+        "multer": "^1.4.5-lts.1",
         "passport": "^0.6.0",
         "passport-discord": "^0.1.4",
         "sqlite3": "^5.1.4"
