--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "discord.js": "^13.6.0",
         "ejs": "^3.1.8",
         "express": "^4.18.2",
+        "express-rate-limit": "^6.7.0",
         "express-session": "^1.17.3",
         "follow-redirects": "^1.14.9",
         "lodash": "^4.17.21",
