--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "scoutingdiscord",
+    "name": "scouting-app",
     "version": "1.0.0",
-    "main": "app.js",
+    "main": "serve.js",
     "dependencies": {
         "@discordjs/builders": "^0.12.0",
         "@discordjs/rest": "^0.3.0",
@@ -30,5 +30,5 @@
     "devDependencies": {
         "node": "^16.13.2"
     },
-    "description": "checker"
+    "description": "Scouting app for FRC. Connects with discord."
 }
