--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dependencies": {
         "@discordjs/builders": "^0.12.0",
         "@discordjs/rest": "^0.3.0",
+        "cookie-parser": "^1.4.6",
         "discord-api-types": "^0.31.1",
+        "discord-oauth2": "^2.11.0",
         "discord.js": "^13.6.0",
         "ejs": "^3.1.8",
         "express": "^4.18.2",
