--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "express-rate-limit": "^6.7.0",
         "express-session": "^1.17.3",
         "follow-redirects": "^1.14.9",
+        "lusca": "^1.7.0",
         "multer": "^1.4.5-lts.1",
         "passport": "^0.6.0",
         "passport-discord": "^0.1.4",
