--- a/config.example.json
+++ b/config.example.json
@@ -12,6 +12,7 @@
 	"season": 2023,
 	"currentComp": "NONE",
 	"clientSec": "",
-	"redirectURI": "http://scout.example.com",
-	"teamServerID": ""
+	"redirectURI": "https://scout.example.com/callback",
+	"teamServerID": "",
+	"baseURL": "https://scout.example.com/"
 }
