--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "multer": "^1.4.5-lts.1",
         "passport": "^0.6.0",
         "passport-discord": "^0.1.4",
+        "ping": "^0.4.2",
         "sanitize-filename": "^1.6.3",
         "sqlite3": "^5.1.4"
     },
