--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.1.0",
     "main": "serve.js",
     "dependencies": {
+        "command-exists": "^1.2.9",
         "cookie-parser": "^1.4.6",
         "discord-oauth2": "^2.11.0",
         "discord.js": "^14.7.1",
@@ -22,7 +23,8 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node discord.js & node serve.js"
+        "start": "node startup.js",
+        "startOnly": "node discord.js & node serve.js"
     },
     "keywords": [],
     "author": "JayAgra",
