--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "scouting-app",
-    "version": "1.1.1",
+    "version": "1.2.0",
     "main": "serve.js",
     "dependencies": {
         "cookie-parser": "^1.4.6",
@@ -19,7 +19,8 @@
         "ping": "^0.4.2",
         "sanitize-filename": "^1.6.3",
         "sqlite3": "^5.1.4",
-        "systeminformation": "^5.17.12"
+        "systeminformation": "^5.17.12",
+        "vader-sentiment": "^1.1.3"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
