allow sessions to persist

--- a/config.example.json
+++ b/config.example.json
@@ -17,5 +17,6 @@
 	"teamServerID": "",
 	"anotherServerID": "",
 	"baseURL": "https://scout.example.com/",
-	"baseURLNoPcl": "scout.example.com"
+	"baseURLNoPcl": "scout.example.com",
+	"serverSecret" : "putsomethinghere"
 }
