--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "discord-oauth2": "^2.11.0",
-    "discord.js": "^14.7.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
@@ -16,15 +15,13 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-discord": "^0.1.4",
-    "ping": "^0.4.2",
     "sanitize-filename": "^1.6.3",
     "sqlite3": "^5.1.4",
-    "systeminformation": "^5.21.9",
     "vader-sentiment": "^1.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node discord.js & node serve.js"
+    "start": "node serve.js"
   },
   "keywords": [],
   "author": "JayAgra",
