--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
+    "express-ws": "^5.0.2",
     "follow-redirects": "^1.14.9",
     "helmet": "^6.0.1",
     "lusca": "^1.7.0",
