--- a/src/js/tsconfig.json
+++ b/src/js/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES2021",
-        "module": "commonjs"
+        "module": "ES6",
+        "skipLibCheck": true
     }
 }
