--- a/src/js/tsconfig.json
+++ b/src/js/tsconfig.json
@@ -3,5 +3,8 @@
         "target": "ES2021",
         "module": "ES6",
         "skipLibCheck": true,
-    }
+    },
+    "paths": [
+        "passkey/pk.d.ts"
+    ]
 }
