--- a/src/js/tsconfig.json
+++ b/src/js/tsconfig.json
@@ -2,6 +2,6 @@
     "compilerOptions": {
         "target": "ES2021",
         "module": "ES6",
-        "skipLibCheck": true
+        "skipLibCheck": true,
     }
 }
