--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "2023.3.0.0",
     "main": "serve.js",
     "dependencies": {
+        "@simplewebauthn/server": "^8.3.5",
+        "@simplewebauthn/typescript-types": "^8.3.4",
         "cookie-parser": "^1.4.6",
         "express": "^4.18.2",
         "express-rate-limit": "^6.7.0",
