update ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
-*node_modules*
 *.DS_Store*
-old/config.json
-*.dccache*
-old/data.db-shm
-old/data.db-wal
-old/data_transact.db-shm
-old/data_transact.db-wal
-old/data_auth.db-shm
-old/data_auth.db-wal
-old/images/*
-old/backups/*
+data.db-shm
+data.db-wal
+data_transact.db-shm
+data_transact.db-wal
+data_auth.db-shm
+data_auth.db-wal
 target/*
 Cargo.lock
