--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-src/js/*/*.js       linguist-vendored
-src/assets/*.js     linguist-vendored
-tsconfig.json       linguist-language=JSON-with-Comments
+static/js/*/*.js            linguist-vendored
+static/assets/*.js          linguist-vendored
+static/js/tsconfig.json     linguist-language=JSON-with-Comments
