--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ actix = "0.13"
 actix-http = "3.4"
 actix-web = "4.4"
 actix-files = "0.6.2"
+actix-session = { version = "0.8.0", features = ["cookie-session"] }
+argon2 = "0.5.2"
 env_logger = "0.10"
 futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
 log = "0.4"
