--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ actix = "0.13"
 actix-http = "3.4"
 actix-web = "4.4"
 actix-files = "0.6.2"
-actix-session = { version = "0.8.0", features = ["cookie-session"] }
+actix-session = { version = "~0.7", features = ["cookie-session"] }
 argon2 = "0.5.2"
 env_logger = "0.10"
 futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
@@ -19,3 +19,5 @@ r2d2 = "0.8"
 r2d2_sqlite = "0.22"
 rusqlite = "0.29"
 serde = { version = "1", features = ["derive"] }
+chrono = "0.4.31"
+rand = "0.8.5"
