--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ actix-http = "3.4"
 actix-web = "4.4"
 actix-files = "0.6.2"
 actix-session = { version = "~0.7", features = ["cookie-session"] }
+actix-identity = "0.4.0"
+cookie = "0.16"
 argon2 = "0.5.2"
 env_logger = "0.10"
 futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
