--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ serde = { version = "1", features = ["derive"] }
 chrono = "0.4.31"
 rand = "0.8.5"
 vader_sentiment = "0.1.1"
+html-escape = "0.2.13"
