--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ chrono = "0.4.31"
 rand = "0.8.5"
 vader_sentiment = "0.1.1"
 html-escape = "0.2.13"
+reqwest = "0.11.22"
+actix-governor = "0.5.0"
