--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 actix-http = "3.4"
-actix-web = "4.4"
+actix-web = { version = "4.4", features = ["openssl"] }
+openssl = { version = "0.10", features = ["v110"] }
 actix-files = "0.6.2"
 actix-session = { version = "~0.7", features = ["cookie-session"] }
 actix-identity = "0.4.0"
@@ -15,6 +16,7 @@ argon2 = "0.5.2"
 env_logger = "0.10"
 futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
 log = "0.4"
+rand = "0.8.5"
 r2d2 = "0.8"
 r2d2_sqlite = "0.22"
 rusqlite = "0.29"
