--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-static/js/*/*.js            linguist-vendored
-static/assets/*.js          linguist-vendored
-static/js/tsconfig.json     linguist-language=JSON-with-Comments
+static/public/js/*/*.js            linguist-vendored
+static/public/assets/*.js          linguist-vendored
+static/public/js/tsconfig.json     linguist-language=JSON-with-Comments
