--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,13 @@ r2d2 = "0.8"
 r2d2_sqlite = "0.22"
 rand = "0.8.5"
 reqwest = "0.11.22"
-rusqlite = "0.29"
 serde = { version = "1", features = ["derive"] }
 static-files = "0.2.1"
 vader_sentiment = "0.1.1"
 
 [build-dependencies]
 static-files = "0.2.1"
+
+[dependencies.rusqlite]
+version = "0.29"
+features = ["bundled"]
