--- a/wasm/webauthn_create/Cargo.toml
+++ b/wasm/webauthn_create/Cargo.toml
@@ -29,3 +29,7 @@ features = [
     "PublicKeyCredential",
     "PublicKeyCredentialCreationOptions",
 ]
+
+[profile.release]
+lto = true
+opt-level = 'z'
