--- a/wasm/login/Cargo.toml
+++ b/wasm/login/Cargo.toml
@@ -16,16 +16,34 @@ wasm-bindgen-futures = { version = "0.4" }
 yew = "0.19"
 js-sys = "0.3"
 gloo = "0.6"
+gloo-timers = "0.3.0"
 url = "2"
 serde_json = "^1.0.79"
 
 [dependencies.web-sys]
 version = "0.3"
 features = [
+    'Document',
+    'Element',
+    'HtmlElement',
+    'Node',
+    'Window',
     "CredentialCreationOptions",
     "CredentialRequestOptions",
     "CredentialsContainer",
     "Navigator",
     "PublicKeyCredential",
     "PublicKeyCredentialCreationOptions",
+    "Location",
+    "HtmlDocument"
 ]
+
+[dependencies.chrono]
+version = "0.4.31"
+features = [
+    "clock"
+]
+
+[profile.release]
+lto = true
+opt-level = 'z'
