--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ build = "build.rs"
 
 [dependencies]
 actix = "0.13.1"
+actix-files = "0.6.5"
 actix-governor = "0.5.0"
 actix-http = "3.4"
 actix-identity = "0.4.0"
