--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bear_tracks"
-version = "5.0.0-beta1"
+version = "5.0.4"
 edition = "2021"
 authors = ["Jayen Agrawal"]
 description = "a scouting webapp for frc"
