--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ openssl = { version = "0.10", features = ["v110"] }
 r2d2 = "0.8"
 r2d2_sqlite = "0.22"
 rand = "0.8.5"
+regex = "1.10.3"
 reqwest = "0.11.22"
 serde = { version = "1.0", features = ["derive"] }
 serde_cbor_2 = { version = "0.12.0-dev" }
