server health endpoint

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "bear_tracks"
 version = "5.0.4"
 edition = "2021"
 authors = ["Jayen Agrawal"]
-description = "a scouting webapp for frc"
+description = "a scouting app for frc"
 readme = "README.md"
 repository = "https://github.com/JayAgra/bearTracks/"
 license = "MIT"
