--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ actix-session = { version = "~0.7", features = ["cookie-session"] }
 actix-web = { version = "4.4", features = ["openssl"] }
 actix-web-actors = "4.2.0"
 actix-web-static-files = "4.0.1"
+anyhow = { version = "~1.0" }
 argon2 = "0.5.2"
 async-trait = { version = "~0.1" }
-anyhow = { version = "~1.0" }
 base64urlsafedata = "0.1.3"
 chrono = { version = "~0.4" }
 dotenv = "0.15.0"
@@ -40,6 +40,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_cbor_2 = { version = "0.12.0-dev" }
 serde_json = "1.0"
 static-files = "0.2.1"
+sysinfo = "0.16.4"
 tokio = { version = "1.22.0", features = [ "sync", "test-util", "macros", "net", "rt-multi-thread", "time" ] }
 vader_sentiment = "0.1.1"
 webauthn-rs = { version = "0.4.8", features = ["danger-allow-state-serialisation"]}
