--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ r2d2 = "0.8"
 r2d2_sqlite = "0.22"
 rand = "0.8.5"
 regex = "1.10.3"
-reqwest = "0.11.22"
+reqwest = { version = "0.11.22", features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_cbor_2 = { version = "0.12.0-dev" }
 serde_json = "1.0"
