--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,6 @@
 FRC_API_KEY=""
 MY_TEAM=766
 HOSTNAME=localhost
-TEAMS=766
-EVENTS=CAFR,CABE
-SEASONS=2023,2024
+TEAMS=766,199,840,841,2288,2367,2489,4141,4904,4973,6711,7245,8404,9143
+EVENTS=CASJ,CASF,CADA,CAFR,IDBO,CABE
+SEASONS=2024
