--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bear_tracks"
-version = "6.0.0"
+version = "6.1.0"
 edition = "2021"
 authors = ["Jayen Agrawal"]
 description = "a scouting app for frc"
@@ -21,14 +21,17 @@ actix-web-static-files = "4.0.1"
 anyhow = { version = "~1.0" }
 argon2 = "0.5.2"
 async-trait = { version = "~0.1" }
+base64 = "0.22.1"
 base64urlsafedata = "0.1.3"
 chrono = { version = "~0.4" }
 dotenv = "0.15.0"
 env_logger = "0.10"
 futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
+hex = "0.4.3"
 html-escape = "0.2.13"
+image = "0.25.5"
 log = "0.4"
-once_cell = { version = "~1.17" }
+once_cell = { version = "~1.19" }
 openssl = { version = "0.10", features = ["v110"] }
 r2d2 = "0.8"
 r2d2_sqlite = "0.22"
