Web versions, APN support start

--- a/ios/beartracks/bearTracks/bearTracks.entitlements
+++ b/ios/beartracks/bearTracks/bearTracks.entitlements
@@ -2,14 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>aps-environment</key>
+	<string>development</string>
+	<key>com.apple.developer.aps-environment</key>
+	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>webcredentials:beartracks.io</string>
 	</array>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
-	<key>com.apple.security.application-groups</key>
-	<string>D6MFYYVHA8.com.jayagra.beartracks</string>
 	<key>com.apple.security.network.client</key>
 	<true/>
 </dict>
