Apple Push Notifications & Basic Web Data Viewers (#53)
v6.0.2

* web progress

* detail data view

* Web versions, APN support start

* notification on client

* 2% battery commit

* 🙏

* why does this have to be hard

* thank scouts button?

* finish APNs and web thing

--- a/.example.env
+++ b/.example.env
@@ -5,6 +5,6 @@ PASSKEY_RP_ID=localhost
 TEAMS=766
 EVENTS=CASJ,CASD,CABE
 SEASONS=2024,2025
-APN_BUNDLE_ID=""
 APN_KEY_ID=""
 APN_TEAM_ID=""
+APN_ENDPOINT="SANDBOX"
